--- a/restapi/docker-compose.yml
+++ b/restapi/docker-compose.yml
@@ -1,28 +1,17 @@
-version: '3.3'
+version: '3.8'
+
 services:
-  db:
-    hostname: mongo-test
-    container_name: "mongoapp"
-    image: mongo
-    networks:
-      - channel-0
-    ports: 
-       - "27017:27017"
-    restart: unless-stopped
+
+  mongo:
+    image: mongo:4.4.6
+    restart: always
+    container_name: test1
+    hostname: host-mongo
+    environment:
+      MONGO_INIT_ROOT_USERNAME: root
+      MONGO_INIT_ROOT_PASSWORD: password
     volumes:
-      - ".mongodata:/data/db"
-      - ./mongo/config:/etc/mongo
-    # command: --config /etc/mongo/mongod.conf
-
-  app: 
-    hostname: app-test
-    container_name: "restapi"
-    image: api
-    networks:
-      - channel-0
+      - ./data:/data/db
+      - ./data/log:/vas/log/mongodb/
     ports: 
-      - "3000:3000"
-    restart: unless-stopped
-
-networks:
-  channel-0: {}
+      - "27017:27017"
